fixed aligning in item-technology

--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -93,7 +93,9 @@
 
   .item-technology {
     position: relative;
+
     display: flex;
+    align-items: center;
     justify-content: center;
 
     // max-width: 60px;
